--- a/WebService/WebService/WebService/bin/WebService.dll.config
+++ b/WebService/WebService/WebService/bin/WebService.dll.config
@@ -103,7 +103,9 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="WebService1Soap" />
+        <binding name="WebService1Soap" maxBufferSize="64000000" maxReceivedMessageSize="64000000">
+
+        </binding>
       </basicHttpBinding>
     </bindings>
     <client>
